[package]
name = "deep-learning-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["k_kuroguro"]
license = "MIT"

[dependencies]
anyhow = "1.0.83"
async-std = "1.12.0"
flate2 = "1.0.30"
futures-util = "0.3.30"
indicatif = "0.17.8"
ndarray = "0.15.6"
plotters = "0.3.5"
reqwest = { version = "0.12.4", features = ["stream"] }
tokio = { version = "1.37.0", features = ["full"] }
